# issen

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  PLAN.md  PLAN_LINUX_GAPS.md  README.md  RESEARCH_INTEL.md  SPLIT_PLAN.md  deny.toml  index.html  mkdocs.yml  sitemap.xml
.cargo/: audit.toml
.github/workflows/: ci.yml  docs.yml  fuzz.yml  release.yml
ARCHITECTURE/: index.html
crates/forensic-pivot/: Cargo.toml
crates/forensic-pivot/rules/: 001-xmrig-miner.yml  002-stratum-port.yml  003-ld-preload-rootkit.yml
crates/forensic-pivot/src/: downloader.rs  lib.rs  loader.rs
crates/forensic-pivot/tests/: phase2_feeds.rs  phase3_loader.rs  phase4_downloader.rs  phase5_downloader.rs
crates/issen-aff4/: Cargo.toml
crates/issen-aff4/src/: lib.rs
crates/issen-archive/: Cargo.toml
crates/issen-archive/src/: extract.rs
crates/issen-browser/: Cargo.toml
crates/issen-browser/src/: lib.rs
crates/issen-cli/: Cargo.toml
crates/issen-cli/src/: banner.rs  ingest_progress.rs  lib.rs  main.rs  pipeline.rs  progress_view.rs  (+1 more)
crates/issen-core/: Cargo.toml
crates/issen-correlation/: Cargo.toml
crates/issen-dd/: Cargo.toml
crates/issen-disk/: Cargo.toml
crates/issen-evtx/: Cargo.toml
crates/issen-ewf/: Cargo.toml
crates/issen-ewf/examples/: bigsur_validate.rs
crates/issen-ewf/src/: lib.rs
crates/issen-fswalker/: Cargo.toml
crates/issen-iso/: Cargo.toml
crates/issen-mem/: Cargo.toml
crates/issen-mem/src/: cmd_memf.rs  correlate.rs  dispatch.rs  dump_source.rs  hashdb.rs  lib.rs  mem_ingest.rs  open.rs  output.rs  provider.rs  strings.rs  timeline.rs
crates/issen-mem/tests/: securitynik_netscan_malfind.rs  securitynik_ps.rs  szechuan_com_hijacking.rs
crates/issen-mft-tree/: Cargo.toml
crates/issen-navigator/: Cargo.toml
crates/issen-plugin-sdk/: Cargo.toml
crates/issen-plugin-sdk/src/: lib.rs
crates/issen-qcow2/: Cargo.toml
crates/issen-remote-access/: Cargo.toml
crates/issen-remote-io/: Cargo.toml
crates/issen-report/: Cargo.toml
crates/issen-shrinkpath/: Cargo.toml
crates/issen-signatures/: Cargo.toml
crates/issen-timeline/: Cargo.toml
crates/issen-unpack/: Cargo.toml
crates/issen-vhdx/: Cargo.toml
crates/issen-vhdx/src/: lib.rs
crates/parsers/issen-parser-amcache/: Cargo.toml
crates/parsers/issen-parser-amcache/src/: lib.rs
crates/parsers/issen-parser-amcache/tests/: real_hive_category.rs
crates/parsers/rt-parser-setupapi/: Cargo.toml
crates/parsers/rt-parser-setupapi/src/: lib.rs
crates/parsers/rt-parser-srum/: Cargo.toml
crates/parsers/rt-parser-srum/src/: lib.rs
crates/rt-cli/: Cargo.toml
crates/rt-correlation/: Cargo.toml
crates/rt-evtx/: Cargo.toml
crates/rt-fswalker/: Cargo.toml
crates/rt-memf/: Cargo.toml
crates/rt-navigator/: Cargo.toml
crates/rt-remote-io/: Cargo.toml
crates/rt-signatures/: Cargo.toml
crates/rt-unpack/: Cargo.toml
crates/rt-unpack/src/: lib.rs  registry.rs  tempdir.rs
ctf-submission-linux-forensic-scenario/: index.html
docs/: ARCHITECTURE.md  architecture-diagram.html  case001-union-answers.md  corpus-catalog.md  dry-analysis-shared-crates.md  format-coverage-audit.md  index.md  privacy.md  remote-sources.md  selective-decompression-triage.md  terms.md
docs/archive/: srum-split-plan-2026-05-04.md
docs/design/: aff4-logical-integration.md
docs/hal-linux-challenge/: submission-albert.md
docs/plans/: 2026-06-11-issen-correlate-capstone-v5.md  2026-06-17-resumable-ingestion-design.md  2026-06-20-saturday-morning-mega-plan.md  2026-07-01-drop-cffi-zip-fleet-migration.md
docs/profiling/: szechuan-sauce-issen-profiling.md
docs/research/: external-file-metadata-forensics.md
docs/tasks/: STATUS.md
docs/workshop-3hr/: KANBAN.md  gamma-script.md
dry-analysis-shared-crates/: index.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fish_history.rs  fuzz_pipeline.rs  logfile.rs  magic_table.rs  mft_logfile.rs  mft_mirror.rs  pe.rs  usnjrnl.rs
north-star-advisor/: ai-context.yml
north-star-advisor/.work-in-progress/: discovery.md  inputs.yml  intelligence-layer-research.md  state.json
north-star-advisor/docs/: ACTION_ROADMAP.md  ADR.md  ARCHITECTURE_BLUEPRINT.md  BRAND_GUIDELINES.md  COMPETITIVE_LANDSCAPE.md  INDEX.md  NORTHSTAR.md  NORTHSTAR_EXTRACT.md  POST_DEPLOYMENT.md  SECURITY_ARCHITECTURE.md  STRATEGIC_RECOMMENDATION.md  tech-stack-research.md
north-star-advisor/research/: forensic-tool-pitfalls.md
paper/: main.tex
paper/sections/: 01-introduction.tex  03-taxonomy.tex  04-properties.tex  05-implementation.tex  06-case-studies.tex  08-discussion.tex  09-conclusion.tex
privacy/: index.html
remote-sources/: index.html
research/: blockchain-key-formats-memory-forensics.md  encryption-and-antifore-registry-artifacts.md  fde-keys-credential-stores-memory-forensics.md  file-signatures-database-research.md  forensic-artifact-parser-libraries.md  linux-credential-artifacts.md  linux-kernel-memory-forensics-data-structures.md  linux-persistence-execution-artifacts.md  lolrmm-registry-paths-complete.md  memory-dump-file-formats-specification.md  memory-forensics-landscape.md  memory-strings-analysis-techniques.md  metadata-extraction-deep-dive.md  ntfs-8dot3-name-forensics.md  oauth-cookies-tokens-memory-forensics.md  onedrive-forensic-research.md  outlook-forensic-research.md  pyrsistencesniper-persistence-detection.md  regf-binary-format-specification.md  registry-crate-source-analysis.md  registry-file-access-artifacts.md  registry-forensic-artifacts-complete-catalog.md  registry-forensic-tools-matrix.md  registry-recovery-carving-antiforensics.md  remote-access-detection-artifacts.md  snapshot-backup-formats-reference.md  third-party-app-registry-forensics.md  usnjrnl-forensic-architecture-patterns.md  volatility3-architecture-deep-dive.md  windows-credential-artifacts-deep.md  windows-filesystem-execution-artifacts.md  windows-persistence-deep-catalog.md
research/external-file-metadata-forensics/: index.html
scripts/ralph/: log.md  prompt.md
search/: search_index.json
terms/: index.html
tests/data/: README.md
(+464 files in other folders)
