[package]
name = "issen-aff4"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "AFF4 disk image reader for the Issen forensic pipeline"
repository.workspace = true

[lib]
name = "issen_aff4"
path = "src/lib.rs"

[dependencies]
issen-core = { workspace = true }
aff4       = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
aff4     = { workspace = true, features = ["test-helpers"] }

[lints]
workspace = true
