[package]
name = "issen-ewf"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT"
description = "E01/EWF forensic image reader"
repository.workspace = true

[dependencies]
issen-core   = { workspace = true }
issen-unpack = { workspace = true }
issen-disk   = { workspace = true }
inventory    = { workspace = true }
zip-forensic-core = { workspace = true }
ewf          = { workspace = true }
thiserror    = { workspace = true }
bytes        = { workspace = true }
tempfile     = { workspace = true }

[dev-dependencies]
# zip-rs writer mints the in-memory EWF-in-zip fixtures the unit tests read back.
zip          = { workspace = true }

[lints]
workspace = true
