[package]
name = "issen-mem"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Memory forensic integration layer for Issen"
repository.workspace = true

[dependencies]
memf-core      = { workspace = true }
memf-format    = { workspace = true }
memf-symbols   = { workspace = true }
memf-linux     = { workspace = true }
memf-windows   = { workspace = true }
memf-strings   = { workspace = true }
memf-correlate = { workspace = true }
forensic-hashdb = { workspace = true }
issen-core     = { workspace = true }
issen-timeline = { workspace = true }
chrono       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
issen-correlation = { workspace = true }
# Total Recall corpus zip is Deflate64; the workspace `zip` default features
# only cover Deflate, so the real-dump test pulls in the deflate64 feature.
zip = { version = "2", default-features = false, features = ["deflate", "deflate64"] }

[lints]
workspace = true
