[package]
name = "issen-vhdx"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "VHDX container reader for the Issen forensic pipeline"
repository.workspace = true

[lib]
name = "issen_vhdx"
path = "src/lib.rs"

[dependencies]
issen-core   = { workspace = true }
issen-unpack = { workspace = true }
inventory    = { workspace = true }
vhdx         = { workspace = true }
zip-forensic-core = { workspace = true }
thiserror    = { workspace = true }
tempfile     = { workspace = true }

[dev-dependencies]
# zip-rs writer mints the in-memory VHDX-in-zip fixtures the unit tests read back.
zip          = { workspace = true }

[lints]
workspace = true
