[package]
name = "rt-unpack"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Collection format detection and extraction for RapidTriage"
repository.workspace = true

[dependencies]
rt-core = { workspace = true }
chrono = { workspace = true }
inventory = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
