[package]
name = "issen-parser-amcache"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
issen-core = { workspace = true }
issen-plugin-sdk = { workspace = true }
notatin = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
inventory = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
