[package]
name = "rt-parser-setupapi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rt-core = { workspace = true }
rt-plugin-sdk = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
inventory = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
