[package]
name = "rt-parser-srum"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "SRUM (System Resource Usage Monitor) parser for RapidTriage"
repository.workspace = true

[dependencies]
rt-core     = { workspace = true }
srum-parser = { workspace = true }
srum-core   = { workspace = true }
inventory   = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
